form offers style fix zaz-index

--- a/my-app/src/common/offers/sendOffer/offersStyle.css
+++ b/my-app/src/common/offers/sendOffer/offersStyle.css
@@ -192,7 +192,7 @@
     top: 30%;
     transition: width 0.5s, top 0.5s;
     overflow: hidden;
-    z-index: 1100;
+    z-index: 0;
     resize: none;
 }
 
@@ -301,7 +301,7 @@
     top: 30%;
     transition: width 0.5s, top 0.5s;
     overflow: hidden;
-    z-index: 1200;
+    z-index: 0;
     resize: none;
 }
 
